--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="DevSolutions - AI-powered software solutions that save you time, reduce costs, and accelerate your business growth." />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://devsolutions.com/" />
+  <meta property="og:title" content="DevSolutions | AI & Software Solutions" />
+  <meta property="og:description"
+    content="AI-powered software solutions that save you time, reduce costs, and accelerate your business growth." />
+  <meta property="og:image" content="/logo.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://devsolutions.com/" />
+  <meta property="twitter:title" content="DevSolutions | AI & Software Solutions" />
+  <meta property="twitter:description"
+    content="AI-powered software solutions that save you time, reduce costs, and accelerate your business growth." />
+  <meta property="twitter:image" content="/logo.png" />
+
   <title>DevSolutions | AI & Software Solutions</title>
 </head>
 
